--- a/Client/src/sass/components_demo.sass
+++ b/Client/src/sass/components_demo.sass
@@ -1,13 +1,18 @@
-th
-	border: 1px solid #7f7f7f
-	&.demo_column
-		width: 60%
+@import mixin
 
-	&.description_column
-		width: 40%
+.components_demo
+	th
+		border: 1px solid #7f7f7f
+		&.demo_column
+			width: 60%
 
-td
-	border: 1px solid #7f7f7f
-	padding: 5px
-	.button
-		margin: 5px 0 0 5px
+		&.description_column
+			width: 40%
+
+	td
+		border: 1px solid #7f7f7f
+		padding: 5px
+		.button
+			margin: 5px 0 0 5px
+
+	@import button
