--- a/Client/src/sass/components_demo.sass
+++ b/Client/src/sass/components_demo.sass
@@ -22,6 +22,10 @@
 		.button
 			margin: 5px 0 0 5px
 
+		.tab_header
+			.button
+				margin: 0
+
 	.container
 		width: 100%
 		border: 1px solid black
@@ -46,6 +50,6 @@
 	.property_example_name
 		margin-bottom: 5px
 
-@import button
-@import form-control
-@import container
+	@import button
+	@import form-control
+	@import container
