Реализована подгрузка контента табов по мере надобности

--- a/Client/src/sass/_header.sass
+++ b/Client/src/sass/_header.sass
@@ -22,10 +22,9 @@
 			color: white
 
 	.menu
-		margin: 0
 		display: inline-block
 		border-bottom: 1px solid #222
-		margin-left: auto
+		margin: 0 0 0 auto
 
 		.item
 			list-style-type: none
