--- a/Client/src/sass/_tab.sass
+++ b/Client/src/sass/_tab.sass
@@ -1,4 +1,5 @@
 @import mixin
+@import effect/fade
 
 .tab_header
 	overflow: hidden
@@ -26,7 +27,7 @@
 .tab_content
 	display: none
 	padding: 6px 12px
-	+animation(fadeEffect, 0s, 5s)
+	+animation(fadeEffect, 0s, 1s)
 
 	&.active
 		display: block
