Создать компонент задачи (Task)

--- a/Client/src/sass/_mixin.sass
+++ b/Client/src/sass/_mixin.sass
@@ -7,7 +7,7 @@
 	-moz-border-radius: $value
 	border-radius: $value
 
-=box-shadow($value)
+=box-shadow($value...)
 	box-shadow: $value
 	-moz-box-shadow: $value
 	-webkit-box-shadow:  $value
