--- a/Client/src/sass/components_demo.sass
+++ b/Client/src/sass/components_demo.sass
@@ -21,15 +21,16 @@
 			vertical-align: top
 
 		.button
-			margin: 5px 0 0 5px
+			margin-top: 5px
 
 		.tab_header
 			.button
 				margin: 0
 
-	.container
-		width: 100%
-		border: 1px solid black
+	.container_demo
+		.container
+			width: 100%
+			border: 1px solid black
 	.container_content
 		&.red
 			background-color: darkRed
@@ -50,6 +51,11 @@
 		margin-bottom: 20px
 	.property_example_name
 		margin-bottom: 5px
+
+	.form_demo
+		.form
+			width: 60%
+			margin-bottom: 20px
 
 	@import button
 	@import form-control
