--- a/Client/src/sass/components_demo.sass
+++ b/Client/src/sass/components_demo.sass
@@ -53,7 +53,7 @@
 			.property_example_name
 				margin-bottom: 5px
 
-		.form_demo
+		&.demo_specified_form
 			.form
 				width: 60%
 				margin-bottom: 20px
