Реализовать страницу регистрации

--- a/Client/src/sass/app.sass
+++ b/Client/src/sass/app.sass
@@ -1,8 +1,14 @@
 @import mixin
 
 .app
+	.content
+		padding: 15px
+
 	@import header
 	@import button
 	@import form-control
+	@import container
 	@import tab
+	@import form
 	@import task
+	@import alert
