Реализовать страницу "Список дел" и "Редактирование задания"

--- a/Client/src/sass/app.sass
+++ b/Client/src/sass/app.sass
@@ -4,6 +4,11 @@
 	.content
 		padding: 15px
 
+		.tasks
+			.task
+				margin: 5px
+				display: inline-block
+
 	@import header
 	@import button
 	@import form-control
