--- a/Client/src/sass/_mixin.sass
+++ b/Client/src/sass/_mixin.sass
@@ -70,3 +70,13 @@
 			+rotate(0)
 		to
 			+rotate(360)
+
+$mainColor: #FBBA42
+$secondaryColor: #FEFEFE
+$lightDarkColor: #A7A6A6
+$normalDarkColor: #485257
+$darkColor: #101112
+
+$normalShadow: 0 0 5px rgba(72, 82, 87, 200)
+$diagonalNormalShadow: 0px 0px 6px rgba(72, 82, 87, 0.6)
+$softShadow: 0 0 6px rgba(72, 82, 87, 00)
