--- a/Client/src/sass/_button.sass
+++ b/Client/src/sass/_button.sass
@@ -9,6 +9,9 @@
 	vertical-align: middle
 	+user-select(none)
 	border: none
+	-webkit-border-radius: 4px
+	-moz-border-radius: 4px
+	border-radius: 4px
 
 	&.stretch
 		display: block
