--- a/Client/src/sass/index.sass
+++ b/Client/src/sass/index.sass
@@ -3,7 +3,7 @@ html, body
 	background-color: #DDD
 	margin: 0
 	padding: 0
-	font-family: sans-serif
+	font-family: 'Roboto', 'Arial', sans-serif
 
 button::-moz-focus-inner,
 input[type="button"]::-moz-focus-inner
