--- a/Client/src/sass/_mixin.sass
+++ b/Client/src/sass/_mixin.sass
@@ -39,9 +39,9 @@
 	user-select: $value
 
 =transition($property, $duration, $timingFunction, $delay)
-	-webkit-transition: $property $duration, $timingFunction, $delay
-	-o-transition: $property $duration, $timingFunction, $delay
-	transition: $property $duration, $timingFunction, $delay
+	-webkit-transition: $property $duration $timingFunction $delay
+	-o-transition: $property $duration $timingFunction $delay
+	transition: $property $duration $timingFunction $delay
 
 =animation($animation, $delay, $duration)
 	-webkit-animation-name: $animation
