--- a/Client/src/sass/_button.sass
+++ b/Client/src/sass/_button.sass
@@ -9,9 +9,8 @@
 	vertical-align: middle
 	+user-select(none)
 	border: none
-	-webkit-border-radius: 4px
-	-moz-border-radius: 4px
-	border-radius: 4px
+	+border-radius(4px)
+	+transition(background-color, .25s, ease, 0s)
 
 	&.stretch
 		display: block
