--- a/Client/src/sass/_form.sass
+++ b/Client/src/sass/_form.sass
@@ -23,15 +23,17 @@
 		margin-bottom: 20px
 		font-size: 16px
 
-	.form_control:focus
-		outline: none
-
 	.button
 		margin-top: 30px
 		padding-left: 30px
 		padding-right: 30px
 		align-self: flex-end
 		font-size: 16px
+		+border-radius(4px)
+		+transition(background-color, .25s, ease, 0s)
+
+	.form_control:focus
+		outline: none
 
 .form_title
 	text-align: left
