--- a/Client/src/sass/_tab.sass
+++ b/Client/src/sass/_tab.sass
@@ -7,7 +7,9 @@
 		border: 1px solid #ccc
 		background-color: #f1f1f1
 
-		button
+		.button
+			width: 100%
+			display: block
 			float: left
 			border: none
 			outline: none
@@ -15,9 +17,6 @@
 			padding: 14px 16px
 			transition: 0.3s
 			font-size: 17px
-
-			&:hover
-				background-color: #ddd
 
 			&.active
 				color: #333
