--- a/Client/src/sass/_form-control.sass
+++ b/Client/src/sass/_form-control.sass
@@ -1,6 +1,6 @@
 @import mixin
 
-.form-control
+.form_control
 	display: block
 	width: 100%
 	height: 34px
@@ -10,8 +10,6 @@
 	color: #555
 	background: #FFF none
 	border: 0
-	+transition(border-color, .15s, ease-in-out, 0s)
-	+transition(box-shadow, .15s, ease-in-out, 0s)
 
 	&:valid
 		+box-shadow(inset 0px 0px 1px 1px rgba(0, 0, 0, .175))
