Добавить кнопки для возможности пометить задание сделанной и важной

--- a/Client/src/sass/_form-edit-task.sass
+++ b/Client/src/sass/_form-edit-task.sass
@@ -1,4 +1,10 @@
 @import mixin
 
-.react-datepicker-wrapper, .form_picker
-	margin-bottom: 5px
+.react-datepicker-wrapper input
+	border: 0
+	border-bottom: 1px solid #A7A6A6
+	+box-shadow(none)
+	padding-bottom: 5px
+
+	&:focus
+		outline: none
