--- a/Client/src/sass/_form.sass
+++ b/Client/src/sass/_form.sass
@@ -15,13 +15,14 @@
 		color: $normalDarkColor
 
 	.form_control
-		-webkit-box-shadow: none
-		-moz-box-shadow: none
-		box-shadow: none
+		+box-shadow(none)
 		padding: 0
 		border-bottom: 1px solid $lightDarkColor
 		margin-bottom: 20px
 		font-size: 16px
+
+	.form_picker
+		margin-bottom: 10px
 
 	.button
 		margin-top: 30px
