--- a/Client/src/sass/_task.sass
+++ b/Client/src/sass/_task.sass
@@ -8,6 +8,13 @@
 	&:hover
 		+box-shadow(0 2px 10px 4px rgba(0,0,0,0.14), 0 1px 25px 4px rgba(0,0,0,0.12))
 
+		.task_footer
+			+box-shadow(0 2px 10px 0.5px rgba(0,0,0,0.07), 0 1px 25px 0.5px rgba(0,0,0,0.06))
+			opacity: 1
+
+	&.important
+		background-color: #D9534F
+
 	.task_title
 		padding: 10px 15px 0 15px
 		font-weight: bold
@@ -16,5 +23,10 @@
 		padding: 12px 15px 15px 15px
 
 	.task_footer
-		padding: 4px 0
+		background-color: #FFF
+		opacity: 0
+		+transition(box-shadow, .218s, ease-in, 0s)
+		+transition(opacity, .218s, ease-in-out, 0s)
 
+		.button
+			width: 100%
