--- a/Client/src/sass/_button.sass
+++ b/Client/src/sass/_button.sass
@@ -8,6 +8,8 @@
 	vertical-align: middle
 	+user-select(none)
 	border: none
+	+border-radius(4px)
+	+transition(background-color, .25s, ease, 0s)
 
 	&.stretch
 		display: block
